Updated Audio Samples, Scaling Fixes on Mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -41,3 +41,7 @@ body {
   font-weight: normal;
   font-style: normal;
 }
+
+body.modal-open {
+  overflow: hidden;
+}
